test/spec_vectors/local_tee/fail/module_39.wat
(module (func $unbound-param (param i32 i64) (local.tee 2 (i32.const 0)) drop))